# TIL

./: .gitignore  README.md
OOP/: README.md
OOP/SOLID/: DIP.md  ISP.md  LSV.md  OCP.md  SRP.md
OOP/refactoring/simple_store/: as_is.py  to_be.py
cleancode/comment_formatting/: comment_formatting.md
cleancode/function/: function.md
cleancode/naming/: naming.md
cpp/boost/async_timer/: main
cpp/boost/thread_pool/: CMakeLists.txt
cpp/boost/thread_pool/include/task/: task_base.h  task_module.h
cpp/boost/thread_pool/include/thread_pool/: thread_pool_manager.h
cpp/boost/thread_pool/src/: main.cpp
cpp/boost/thread_pool/src/task/: task_base.cpp  task_module.cpp
cpp/boost/thread_pool/src/thread_pool/: thread_pool_manager.cpp
cpp/constructor_overloading/: constructor_overloading.cpp  constructor_overloading.h  main.cpp
cpp/doc/: forward_declaration.md  static_const.md  thread_sanitizer.md  variable_initialization.md
cpp/doc/modern_cpp/: build.md  memory.md
cpp/namespace/: namespace.cpp  namespace_anonymous.cpp  namespace_anonymous.h
cpp/new_delete/: main.cpp
cpp/reference/: main
cpp/src_example/constructor_overloading/: main
cpp/src_example/copy_constructor/: main  main.cpp  sample_class.cpp  sample_class.h
cpp/src_example/explicit_mutable/: explicit_mutable.h  explicit_mutable.md  main  main.cpp
cpp/src_example/initializer_list/: class_initializer.cpp  class_initializer.h  main  main.cpp
python/: pip_tip.md
python/src/: coroutine_example.py
ros2/doc/: 1_intro.md
system/etc/: abi-eabi.md  threadpool-size.md
(+27 files in other folders)
